Switch to linked list to avoid dealing with indexes